--- a/Classes/package.json
+++ b/Classes/package.json
@@ -11,5 +11,8 @@
   "dependencies": {
     "chromedriver": "^140.0.2",
     "selenium-webdriver": "^4.35.0"
+  },
+  "devDependencies": {
+    "chai": "^6.0.1"
   }
 }
